fixed alignment

--- a/src/assets/scss/common/_feedback-form.scss
+++ b/src/assets/scss/common/_feedback-form.scss
@@ -51,6 +51,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 4rem;
+    margin-top: 3rem;
   .right{
     border-radius: 1.2rem;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.04), 0px 1px 1px rgba(0, 0, 0, 0.04);
