--- a/src/assets/scss/intelligence/_transactionHistory.scss
+++ b/src/assets/scss/intelligence/_transactionHistory.scss
@@ -6,7 +6,7 @@
 
         .ShowDust{
                 text-align: left;
-    margin-top: -44px;
+    margin-top: -42px;
     margin-bottom: 3rem;
 
             p{
